tests/expectations/compiler/finalize/finalize_statement_incorrect_args_fail.out
DCE_ENABLED:
Error [ETYC0372006]: Call expected `2` args, but got `3`
    --> compiler-test:7:16
     |
   7 |         return finalize_mint_public(receiver, amount, amount);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372006]: Call expected `2` args, but got `3`
    --> compiler-test:7:16
     |
   7 |         return finalize_mint_public(receiver, amount, amount);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
